# gingersnap

./: ChangeLog.md  LICENSE  README.md  gingersnap.cabal
src/Gingersnap/: Core.hs
