name:                gingersnap
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             MIT
license-file:        LICENSE
author:              tom-bop
maintainer:          tom@tinybop.com
-- copyright:           
category:            Web
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:
      Gingersnap.Core
  -- other-modules:       
  -- other-extensions:    
  build-depends:
      base >=4.9 && <5
    , aeson
    , bytestring
    , http-types
    , postgresql-simple
    , resource-pool
    , snap-core
  hs-source-dirs:      src
  default-language:    Haskell2010
